[gd_scene load_steps=5 format=3 uid="uid://b8upc5vs5ynlw"]

[ext_resource type="Script" path="res://src/UI/Editor/EditorSettings.gd" id="1_b3w4b"]
[ext_resource type="Texture2D" uid="uid://fs6yo18nrkpb" path="res://Assets/UI Textures/Icon Font/reload-line.png" id="2_ik3cf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_arin6"]
bg_color = Color(0.364706, 0.364706, 0.364706, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20
shadow_size = 8
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_owvrv"]
content_margin_top = 15.0
content_margin_right = 276.0
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="EditorSettings" type="Panel"]
self_modulate = Color(0.313726, 0.313726, 0.313726, 1)
custom_minimum_size = Vector2(600, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 416.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_arin6")
script = ExtResource("1_b3w4b")
ConnectionDistanceNodePath = NodePath("VBoxContainer/HideConnectionDistance/HSlider")
HoldShiftCheckPath = NodePath("VBoxContainer/HoldShift/CheckButton")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.5
offset_right = 56.5
offset_bottom = 26.0
grow_horizontal = 2
text = "Editor Settings"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 575.0
offset_right = 593.0
offset_bottom = 31.0
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 24.01
offset_top = 66.905
offset_right = 315.01
offset_bottom = 126.245

[node name="HideConnectionDistance" type="Label" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "The maximum distance a response node can be from a dialog node before the connection line is hidden"
mouse_filter = 1
text = "Hide Connection Distance"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HideConnectionDistance"]
layout_mode = 0
offset_left = 275.0
offset_top = 8.0
offset_right = 544.0
offset_bottom = 24.0
theme_override_styles/slider = SubResource("StyleBoxFlat_owvrv")
max_value = 10000.0
value = 1000.0
allow_greater = true

[node name="ValueEdit" type="LineEdit" parent="VBoxContainer/HideConnectionDistance/HSlider"]
layout_mode = 0
offset_left = -6.0
offset_top = 20.0
offset_right = 34.0
offset_bottom = 46.0
text = "1000"

[node name="Resetbutton" type="Button" parent="VBoxContainer/HideConnectionDistance/HSlider"]
layout_mode = 0
offset_left = 55.0
offset_top = 15.0
offset_right = 87.0
offset_bottom = 47.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_constants/icon_max_width = -12
icon = ExtResource("2_ik3cf")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 37.285)
layout_mode = 2

[node name="HoldShift" type="Label" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "By default, moving dialog nodes will not cause it's connected response nodes to move with it, unless you're holding shift.

Inverting it will mean that dialog nodes WILL move response nodes, unless holding shift"
mouse_filter = 1
text = "Invert Dialog Movement Functionality"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/HoldShift"]
layout_mode = 0
offset_left = 308.54
offset_right = 348.54
offset_bottom = 24.0

[node name="EnableUndo" type="Label" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "The Undo Redo system is buggy and extremely memory inefficient. This program is in alpha"
mouse_filter = 1
text = "Enable Undo/Redo"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/EnableUndo"]
layout_mode = 0
offset_left = 308.54
offset_right = 348.54
offset_bottom = 24.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 4
horizontal_scroll_mode = 0

[node name="KeyBinds" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/KeyBinds"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
text = "Key Binds"
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/HideConnectionDistance/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="text_submitted" from="VBoxContainer/HideConnectionDistance/HSlider/ValueEdit" to="." method="_on_value_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HideConnectionDistance/HSlider/Resetbutton" to="." method="_on_resetbutton_pressed"]
[connection signal="toggled" from="VBoxContainer/HoldShift/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="VBoxContainer/EnableUndo/CheckButton" to="." method="_on_undo_button_toggled"]
